Project

General

Profile

Actions

Bug #15916

closed

rbd-mirror might got stuck in calculating "behind master" position

Added by Mykola Golub almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If journal tag tid is updated frequently while there is a write load (e.g. image is reopened for write in loop), it might happen that at some time the tag tid for the master registered client is less then tag tid for the mirror registered client. In this case rbd-mirror may go to loop calculating "behind master" position.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #15959: jewel: rbd-mirror might got stuck in calculating "behind master" positionResolvedActions
Actions #1

Updated by Mykola Golub almost 8 years ago

  • Status changed from New to In Progress
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #15959: jewel: rbd-mirror might got stuck in calculating "behind master" position added
Actions #5

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF