rbd-mirror: calculate behind_master only if mirror tag is not newer than master

Fixes: http://tracker.ceph.com/issues/15916
Signed-off-by: Mykola Golub <mgolub@mirantis.com>